boltffi_bindgen/src/render/typescript/snapshots/boltffi_bindgen__render__typescript__templates__tests__snapshot_function_wire_encoded_return.snap
---
source: boltffi_bindgen/src/render/typescript/templates.rs
expression: template.render().unwrap()
---
export function getUsers(): User[] {
  const outPtr = _module.allocBufDescriptor();
  let callCompleted = false;
  try {
    (_module.exports.boltffi_get_users as Function)(outPtr);
    callCompleted = true;
    const reader = _module.readerFromBuf(outPtr);
    const result = reader.readArray(() => decodeUser(reader));
    return result;
  } finally {
    if (callCompleted) {
      _module.freeBuf(outPtr);
    } else {
      _module.freeBufDescriptor(outPtr);
    }
  }
}
